Solved some problems in lab1

--- a/lab1/poly_pre.ipynb
+++ b/lab1/poly_pre.ipynb
@@ -23,7 +23,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -49,7 +49,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -59,9 +59,9 @@
         "  '''\n",
         "  res,xpw = qs[0], x  # init result and power of x\n",
         "  for i in range(1,len(qs)):  # start with second coefficient\n",
-        "    res += ??? # your code here\n",
-        "    xpw *= ??? # your code here\n",
-        "  return res"
+        "    res += qs[i] * xpw # your code here\n",
+        "    xpw *= x # your code here\n",
+        "  return res\n"
       ]
     },
     {
@@ -95,11 +95,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "hide-output": false
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "39.9 µs ± 7.19 µs per loop (mean ± std. dev. of 100 runs, 100 loops each)\n"
+          ]
+        }
+      ],
       "source": [
         "%%timeit -n100 -r100 qs = [1,]*100\n",
         "calc_polynomial_A(qs,15)"
@@ -107,11 +115,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "hide-output": false
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "16.7 µs ± 3.04 µs per loop (mean ± std. dev. of 100 runs, 100 loops each)\n"
+          ]
+        }
+      ],
       "source": [
         "%%timeit -n100 -r100 qs = [1,]*100\n",
         "calc_polynomial_B(qs,15)"
@@ -174,7 +190,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.2"
+      "version": "3.11.7"
     },
     "title": "Foundations of Computational Economics #9"
   },
