--- a/lab1/hanoi_pre.ipynb
+++ b/lab1/hanoi_pre.ipynb
@@ -43,7 +43,7 @@
         "    do nothing, return\n",
         "  if n==1:\n",
         "    move(source,target)\n",
-        "  if n>0:\n",
+        "  if n>1:\n",
         "    call main_algorithm for n-1 disks, moving from `source` to `aux` via `target`\n",
         "    move(source,target)\n",
         "    call main_algorithm for n-1 disks, moving from `aux` to `target` via `source`\n"
@@ -51,10 +51,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "id": "ea0e6dd4",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Move disk from A to B\n",
+            "Move disk from A to C\n",
+            "Move disk from B to C\n",
+            "Move disk from A to B\n",
+            "Move disk from C to A\n",
+            "Move disk from C to B\n",
+            "Move disk from A to B\n",
+            "Move disk from A to C\n",
+            "Move disk from B to C\n",
+            "Move disk from B to A\n",
+            "Move disk from C to A\n",
+            "Move disk from B to C\n",
+            "Move disk from A to B\n",
+            "Move disk from A to C\n",
+            "Move disk from B to C\n"
+          ]
+        }
+      ],
       "source": [
         "def move(frm,to):\n",
         "  \"\"\"Print the move from one peg to another.\"\"\"\n",
@@ -62,13 +84,19 @@
         "\n",
         "def move_via(frm,via,to):\n",
         "  \"\"\"Move via an auxiliary peg.\"\"\"\n",
-        "  pass # your code here\n",
+        "  move(frm,via)\n",
+        "  move(via,to)\n",
         "\n",
         "def hanoi_solver(n: int,source,auxiliary,target):\n",
         "  \"\"\"Print the moves to solve Tower of Hanoi with n disks.\"\"\"\n",
-        "  pass # your code here\n",
+        "  if n == 1:\n",
+        "    move(source,target)\n",
+        "  else:\n",
+        "    hanoi_solver(n-1,source,target,auxiliary)\n",
+        "    move(source,target)\n",
+        "    hanoi_solver(n-1,auxiliary,source,target)\n",
         "\n",
-        "# your code here"
+        "hanoi_solver(4,'A','B','C')"
       ]
     },
     {
@@ -96,7 +124,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.2"
+      "version": "3.11.7"
     }
   },
   "nbformat": 4,
